# pwr-dbs

./: .gitignore  README.md  generatepb.sh
node/: CMakeLists.txt
node-rs/: Cargo.toml  build.rs
node-rs/src/: main.rs
node-rs/src/protos/: .gitignore
node/source/: client.cc  process.h
protobuf/: delegate.proto
server/: dbs.py  localstorage.py
server/templates/: add.html  centertext.html  index.html  work.html
